payment flow implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,7 +130,7 @@
         
         <div class="card demo-card-header-pic">
             <div class="card-content card-content-padding">
-                    
+                
                     <div class="book-details">
                             <ul>
                                 <li>Title: <b>{{productData.vignette.title}}</b></li>
@@ -139,6 +139,9 @@
                             
                         </div>
             </div>
+            <div class="block block-strong no-padding">
+                <div id="demo-calendar-inline-container"></div>
+              </div>
         </div>
         
         <div class="block">
