minify barion market js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
     </div>
 
     <!-- JavaScript files -->
-    <script type="text/javascript" src="./../javascripts/BarionMarket.js"></script>
+    <script type="text/javascript" src="./../javascripts/BarionMarket-1.0.0.min.js"></script>
     <script type="text/javascript" src="./../javascripts/framework7/dist/js/framework7.min.js"></script>
     <script type="text/javascript" src="./../javascripts/ematrica-app.js"></script>
     
