--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <!--<link rel="stylesheet" href="/dist/css/framework7.ios.css">-->
     <link rel="stylesheet" href="./../stylesheets/icons.css">
     <link rel="stylesheet" href="./../stylesheets/my.css">
-    <link rel="stylesheet" href="./../stylesheets/framework7.barion.css">
+    <link rel="stylesheet" href="./../stylesheets/framework7.barion.min.css">
 </head>
 <body>
     <div id="app">
