--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <title>Barion Bookstore</title>
     <link rel="shortcut icon" href="/img/favicon.png">
     <!--<link rel="stylesheet" href="/dist/css/framework7.ios.css">-->
-    <link rel="stylesheet" href="./../stylesheets/icons.css">
-    <link rel="stylesheet" href="./../stylesheets/my.css">
+    <link rel="stylesheet" href="./../stylesheets/icons.min.css">
+    <link rel="stylesheet" href="./../stylesheets/my.min.css">
     <link rel="stylesheet" href="./../stylesheets/framework7.barion.min.css">
 </head>
 <body>
@@ -41,7 +41,7 @@
     <!-- JavaScript files -->
     <script type="text/javascript" src="./../javascripts/BarionMarket-1.0.0.min.js"></script>
     <script type="text/javascript" src="./../javascripts/framework7/dist/js/framework7.min.js"></script>
-    <script type="text/javascript" src="./../javascripts/ematrica-app.js"></script>
+    <script type="text/javascript" src="./../javascripts/ematrica-app.min.js"></script>
     
 
     <script id="vignetteTemplate" type="text/template7">
