getvehicle feature added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,9 +39,9 @@
     </div>
 
     <!-- JavaScript files -->
-    <script type="text/javascript" src="./../javascripts/BarionMarket-1.0.0.min.js"></script>
+    <script type="text/javascript" src="./../javascripts/BarionMarket.js"></script>
     <script type="text/javascript" src="./../javascripts/framework7/dist/js/framework7.min.js"></script>
-    <script type="text/javascript" src="./../javascripts/ematrica-app.min.js"></script>
+    <script type="text/javascript" src="./../javascripts/ematrica-app.js"></script>
     
 
     <script id="vignetteTemplate" type="text/template7">
@@ -111,8 +111,8 @@
                 </div>
                 <div class="book-details">
                     <ul>
-                        <li>Licenseplate: <b>{{vehicle.licensePlate}}</b></li>
-                        <li>Type: <b>{{vehicle.type}}</b></li>
+                        <li>Licenseplate: <b>{{licensePlate}}</b></li>
+                        <li>Type: <b>{{type}}</b></li>
                         </ul>
                     <div class="block">
                         <input type="button" id="changeVehicleButton" class="col button button-big hidden" value="Change vehicle" />
