fix vehicle update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,6 +113,7 @@
                     <ul>
                         <li>Licenseplate: <b>{{licensePlate}}</b></li>
                         <li>Type: <b>{{type}}</b></li>
+                        <li>Country: <b>{{countryCode}}</b></li>
                         </ul>
                     <div class="block">
                         <input type="button" id="changeVehicleButton" class="col button button-big hidden" value="Change vehicle" />
