--- a/views/index.ejs
+++ b/views/index.ejs
@@ -148,5 +148,15 @@
             <input type="button" id="buyVignetteButton" class="col button button-big hidden" value="Buy with Barion" data-vignette-id="{{productData.vignetteId}}" />
         </div>
     </script>
+
+    <script id="redirectTemplate" type="text/template7">
+        <div class="redirect-template">
+        <div class="loading">
+            <img class="loading-icon" src="./../img/loading.gif" alt="Loading" />
+            <br>
+            Checking payment...
+        </div>
+    </div>
+    </script>
 </body>
 </html>
