--- a/public/stylesheets/my.css
+++ b/public/stylesheets/my.css
@@ -9,6 +9,10 @@ html.with-panel-left-cover .statusbar,
     transition: 250ms;
 }
 
+html.device-android .statusbar {
+    margin-top: -20px;
+}
+
 #app, 
 #app .view {
     background: #1A80BB !important;
@@ -154,7 +158,7 @@ html.with-panel-left-cover .statusbar,
 
 .book .book-details ul {
     list-style-type: none;
-    margin: 0;
+    margin: 0 0 15px 0;
     padding: 0 15px;
 }
 
@@ -193,3 +197,17 @@ html.with-panel-left-cover .statusbar,
         color: #ffffff;
         padding: 8px;
     }
+    
+.loading {
+    text-align: center;
+    font-size: 15px;
+    line-height: 21px;
+    font-weight: 700;
+    color: #595959;
+}
+
+.loading .loading-icon {
+    margin: 15px auto;
+    width: 64px;
+    height: 64px;
+}
