redirect page fixes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
                 <div class="page-content">
                     <div class="list-template"></div>
                     <div class="time-template"></div>
+                    <div class="redirect-template"></div>
                 </div>
             </div>
         </div>
