fix redirect page

--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -6,9 +6,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2196f3">
     <title>My App</title>
-    <link rel="stylesheet" href="./../stylesheets/icons.min.css">
-    <link rel="stylesheet" href="./../stylesheets/my.min.css">
-    <link rel="stylesheet" href="./../stylesheets/framework7.barion.min.css">
+    <link rel="stylesheet" href="./../stylesheets/icons.css">
+    <link rel="stylesheet" href="./../stylesheets/my.css">
+    <link rel="stylesheet" href="./../stylesheets/framework7.barion.css">
 
 </head>
 <body>
