--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,11 @@
     <title>Barion vehiclestore</title>
     <link rel="shortcut icon" href="/img/favicon.png">
     <!--<link rel="stylesheet" href="/dist/css/framework7.ios.css">-->
-    <link rel="stylesheet" href="./../stylesheets/icons.min.css">
+    <link rel="stylesheet" href="./../stylesheets/icons.css">
     <link rel="stylesheet" href="./../javascripts/framework7/dist/css/framework7.ios.min.css">
     <!--<link rel="stylesheet" href="./../javascripts/framework7/dist/css/framework7.min.css">-->
-    <link rel="stylesheet" href="./../stylesheets/my.min.css">
-    <link rel="stylesheet" href="./../stylesheets/framework7.barion.min.css">
+    <link rel="stylesheet" href="./../stylesheets/my.css">
+    <link rel="stylesheet" href="./../stylesheets/framework7.barion.css">
 </head>
 <body>
     <div id="app">
@@ -40,9 +40,9 @@
     </div>
 
     <!-- JavaScript files -->
-    <script type="text/javascript" src="./../javascripts/BarionMarket.min.js"></script>
+    <script type="text/javascript" src="./../javascripts/BarionMarket.js"></script>
     <script type="text/javascript" src="./../javascripts/framework7/dist/js/framework7.min.js"></script>
-    <script type="text/javascript" src="./../javascripts/ematrica-app.min.js"></script>
+    <script type="text/javascript" src="./../javascripts/ematrica-app.js"></script>
 
     <script id="contentTemplate" type="text/template7">
         <div class="list">
